# veros-bgc

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst  requirements.txt
doc/_build/doctrees/: diagnostics.doctree  environment.pickle  index.doctree
doc/_build/doctrees/quickstart/: developer-guide.doctree  get-started.doctree  user-guide.doctree
doc/_build/doctrees/reference/: diagnostics.doctree  settings.doctree  setup-gallery.doctree  variables.doctree
doc/_build/doctrees/reference/setups/: bgc-4deg.doctree
doc/_build/html/: .buildinfo  diagnostics.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/quickstart/: get-started.rst.txt  user-guide.rst.txt
doc/_build/html/_sources/reference/: diagnostics.rst.txt  settings.rst.txt  setup-gallery.rst.txt
doc/_build/html/_static/: documentation_options.js
doc/_build/html/quickstart/: developer-guide.html  get-started.html  user-guide.html
doc/_build/html/reference/: diagnostics.html  settings.html  setup-gallery.html  variables.html
doc/_build/html/reference/setups/: bgc-4deg.html
doc/quickstart/: developer-guide.rst
doc/reference/: variables.rst
veros_bgc/: __init__.py  _version.py  settings.py  variables.py
veros_bgc/core/: atmospherefluxes.py  npzd.py  npzd_rules.py  npzd_tracers.py
veros_bgc/diagnostics/: npzd_monitor.py
veros_bgc/setup/bgc_global_4deg/: __init__.py  bgc_global_four_degree.py
(+11 files in other folders)
