[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = veros_bgc/_version.py
versionfile_build = veros_bgc/_version.py
tag_prefix = v

[flake8]
exclude = __init__.py
ignore =
    # Comments
    E26,
    # Lines starting with binary operators
    W503,
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --forked
